# california-housing-chico

./: CONTRIBUTING.md  Dockerfile  README.md  environment.yml  home.py  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.md
notebooks/: template.ipynb
pages/: 01_home.md
scripts/: train_model.py
src/california/: .env  __init__.py  config.py  models.py  plots.py  streamlit_helpers.py  utils.py
tests/: conftest.py
