[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.ruff]
line-length = 80

[project]
name = "california"
version = "0.1.0"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyarrow>=16.1.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "statsmodels>=0.14.4",
]
